*
*  @author    Hennes Hervé <contact@h-hennes.fr>
*  @copyright 2013-2021 Hennes Hervé
*  @license   http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
*  http://www.h-hennes.fr/blog/
*/
2022-       - V 1.6.4 : #241 Unable to use db:export with custom mysql port
                        #242 New Command analyze:tables:size
2021-12-10  - V 1.6.3 : #194 Check compatibility from php5.6 to php7.2
                        #227 New Command analyze:carriers
                        #228 New Command analyze:payments
                        #232 Enhancement module:generate:controller
                        #233 Provide verbose information when module controller is created
                        #92  Improve module list ( add option to show id )
                        #229 New Command analyse:website
2021-03-11  - V 1.6.2 : #142 Error when try to start by prestashopConsole command
                        #170 Create Webservice key command
                        #173 Change link in readme
                        #175 New Command Webservice:key:delete
                        #182 Fix PhpStan Errors
                        #193 Anonymize command must also anonymize customer emails in sav
                        Disable the install command which will be refactored in next version
                        Branch 1.6 is the last branch which deals with Prestashop 1.6 and Php < 7.2
                        Small improvements
2020-06-25  - V 1.6.1 : #106 Error in generate Images commands
                        #107 Improve module:hook:list command
                        #108 Update licence header for generated code
                        #116 db:export allow to define file name
2020-04-07  - V 1.6.0 : Improve code quality
                        New commands to generate htaccess and robots.txt files
                        New commands to list hooks (global or with modules)
                        New command to generate images thumbnails