@@ -24,6 +24,7 @@
 */
 2022-       - V 1.6.4 : #241 Unable to use db:export with custom mysql port
                         #242 New Command analyze:tables:size
+                        #243 dev:add-index should not add index.php files in composer directory
 2021-12-10  - V 1.6.3 : #194 Check compatibility from php5.6 to php7.2
                         #227 New Command analyze:carriers
                         #228 New Command analyze:payments
